Customize tmux status line

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,19 +25,19 @@ bind c new-window -c "#{pane_current_path}"
 
 # Status bar configuration
 set-option -g status-position top
-set-option -g status-bg colour236
+set-option -g status-bg default
 set-option -g status-fg white
 set-option -g window-status-format "#I:#W"
-set-option -g window-status-current-format "#[bg=colour238] #I:#W "
+set-option -g window-status-current-format "#[bg=colour237] #I:#W "
 set-option -g window-status-separator " "
 set-option -g status-justify centre
 set -g status-left-length 40 # default is 30
 set -g status-left " Sess: #S / CPU: #{sysstat_cpu} / Mem: #{sysstat_mem} "
-set -g status-right "#{prefix_highlight}%a %b %d / %I:%M %p / Batt: #{battery_percentage} "
+set -g status-right "#{prefix_highlight} %a %b %d / %I:%M %p / Batt: #{battery_percentage} "
 
 # Pane border
-set -g pane-border-fg colour240
-set -g pane-active-border-fg colour6
+set -g pane-border-fg colour244
+set -g pane-active-border-fg cyan
 
 # Split panes
 unbind %
