Continue to refactor status line

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,18 +25,17 @@ bind c new-window -c "#{pane_current_path}"
 
 # Status bar configuration
 set-option -g status-position top
-set-option -g status-bg default
+set-option -g status-bg colour236
 set-option -g status-fg white
-set-option -g window-status-format "#I:#W"
-set-option -g window-status-current-format "#[bg=colour237] #I:#W "
-set-option -g window-status-separator " "
 set-option -g status-justify centre
-set -g status-left-length 40 # default is 30
+set-option -g window-status-format "#I:#W"
+set-option -g window-status-current-format "#[bold]#I:#W∗"
+set-option -g status-left-length 40
 set -g status-left " Sess: #S / CPU: #{sysstat_cpu} / Mem: #{sysstat_mem} "
-set -g status-right "#{prefix_highlight} %a %b %d / %I:%M %p / Batt: #{battery_percentage} "
+set -g status-right "#{prefix_highlight} %a %b %d / %I:%M %p / ϟ #{battery_percentage} "
 
 # Pane border
-set -g pane-border-fg colour244
+set -g pane-border-fg colour236
 set -g pane-active-border-fg cyan
 
 # Split panes
@@ -52,7 +51,7 @@ set -g @sysstat_mem_view_tmpl "#{mem.pused}"
 # tmux-prefix-highlight
 set -g @prefix_highlight_bg default
 set -g @prefix_highlight_show_copy_mode 'on'
-set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow,bold'
+set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow'
 
 # Configure the default shell
 set -g default-shell $SHELL
