--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,12 +31,12 @@ set-option -g status-justify centre
 set-option -g window-status-format "#I:#W"
 set-option -g window-status-current-format "#[bold]#I:#W∗"
 set-option -g status-left-length 40
-set -g status-left " Sess: #S / CPU: #{sysstat_cpu} / Mem: #{sysstat_mem} "
-set -g status-right "#{prefix_highlight} %a %b %d / %I:%M %p / ϟ #{battery_percentage} "
+set -g status-left " Sess #S / CPU #{sysstat_cpu} / Mem #{sysstat_mem} "
+set -g status-right "#{prefix_highlight} %A, %b %d %Y %I:%M %p / ϟ #{battery_percentage} "
 
 # Pane border
-set -g pane-border-fg colour236
-set -g pane-active-border-fg cyan
+set -g pane-border-style bg=default,fg=colour238
+set -g pane-active-border-style bg=default,fg=colour244
 
 # Split panes
 unbind %
