Change the style for current window

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,7 +29,7 @@ set-option -g status-bg colour236
 set-option -g status-fg white
 set-option -g status-justify centre
 set-option -g window-status-format "#I:#W"
-set-option -g window-status-current-format "#[bold]#I:#W∗"
+set-option -g window-status-current-format "#[bg=colour237] #I:#W* "
 set-option -g status-left-length 40
 set -g status-left " Sess #S / CPU #{sysstat_cpu} / Mem #{sysstat_mem} "
 set -g status-right "#{prefix_highlight} %A, %b %d %Y %I:%M %p / ϟ #{battery_percentage} "
