Simplify status bar

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,12 +27,12 @@ bind c new-window -c "#{pane_current_path}"
 set-option -g status-position top
 set-option -g status-bg colour236
 set-option -g status-fg white
-set-option -g status-justify centre
+set-option -g status-justify left
 set-option -g window-status-format "#I:#W"
-set-option -g window-status-current-format "#[bg=colour237] #I:#W* "
-set-option -g status-left-length 40
-set -g status-left " Sess #S / CPU #{sysstat_cpu} / Mem #{sysstat_mem} "
-set -g status-right "#{prefix_highlight} %A, %b %d %Y %I:%M %p / ϟ #{battery_percentage} "
+set-option -g window-status-current-format "#[bg=colour238] #I:#W "
+set-option -g status-right-length 50
+set -g status-left "Sess #S - "
+set -g status-right "#{prefix_highlight} %A, %b %d %Y %I:%M %p / ϟ #{battery_percentage}"
 
 # Pane border
 set -g pane-border-style bg=default,fg=colour238
@@ -72,5 +72,4 @@ bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "pbcopy"
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'samoshkin/tmux-plugin-sysstat'
 run "~/.tmux/plugins/tpm/tpm"
