--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,7 +31,7 @@ set-option -g status-justify left
 set-option -g window-status-format "#I:#W"
 set-option -g window-status-current-format "#[bg=colour238] #I:#W "
 set-option -g status-right-length 50
-set -g status-left "Sess #S - "
+set -g status-left "Sess: #S - "
 set -g status-right "#{prefix_highlight} %A, %b %d %Y %I:%M %p / ϟ #{battery_percentage}"
 
 # Pane border
