Change active border color to cyan

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -36,7 +36,7 @@ set -g status-right "#{prefix_highlight} %A, %b %d %Y %I:%M %p / ϟ #{battery_pe
 
 # Pane border
 set -g pane-border-style bg=default,fg=colour238
-set -g pane-active-border-style bg=default,fg=colour244
+set -g pane-active-border-style bg=default,fg=cyan
 
 # Split panes
 unbind %
