Update status bar

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,10 +29,10 @@ set-option -g status-bg colour236
 set-option -g status-fg white
 set-option -g status-justify left
 set-option -g window-status-format "#I:#W"
-set-option -g window-status-current-format "#[bg=colour238] #I:#W "
-set-option -g status-right-length 50
-set -g status-left "Sess: #S - "
-set -g status-right "#{prefix_highlight} %A, %b %d %Y %I:%M %p / ϟ #{battery_percentage}"
+set-option -g window-status-current-format "#[bg=colour242,fg=black] #I:#W* "
+set-option -g status-right-length 200
+set -g status-left "Sess: #S #[fg=yellow]∙ "
+set -g status-right "#{prefix_highlight}#{pane_current_path} #[fg=blue]∙ #[fg=white]%A, %b %d %Y %I:%M %p #[fg=red]∙ #[fg=white]ϟ #{battery_percentage}"
 
 # Pane border
 set -g pane-border-style bg=default,fg=colour238
