Refactor tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,8 +2,8 @@
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",*:Tc"
 
-# Address vim mode switching delay
-set -sg escape-time 0
+# Configure the default shell
+set -g default-shell $SHELL
 
 # Increase scrollback buffer size
 set -g history-limit 100000
@@ -17,8 +17,8 @@ set -g mouse on
 
 # Start windows and panes at 1
 set -g base-index 1
-setw -g pane-base-index 1
-set-option -g renumber-windows on
+set -g pane-base-index 1
+set -g renumber-windows on
 
 # Open new windows in current directory
 bind c new-window -c "#{pane_current_path}"
@@ -34,26 +34,21 @@ set-option -g status-right-length 200
 set -g status-left "Sess: #S #[fg=yellow]∙ "
 set -g status-right "#{prefix_highlight}#{pane_current_path} #[fg=blue]∙ #[fg=white]%A, %b %d %Y %I:%M %p #[fg=red]∙ #[fg=white]ϟ #{battery_percentage}"
 
-# Pane border
+# Panes settings
 set -g pane-border-style bg=default,fg=colour238
 set -g pane-active-border-style bg=default,fg=cyan
-
-# Split panes
 unbind %
 bind b split-window -v -c "#{pane_current_path}"
 unbind '"'
 bind v split-window -h -c "#{pane_current_path}"
-
-# tmux-prefix-highlight
-set -g @prefix_highlight_bg default
-set -g @prefix_highlight_show_copy_mode 'on'
-set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow'
-
-# Configure the default shell
-set -g default-shell $SHELL
+unbind x
+bind x kill-pane
 
 # Use vi(m) key bindings
 setw -g mode-keys vi
+
+# Address vim mode switching delay
+set -sg escape-time 0
 
 # Enter copy-mode with vim key bindings
 bind -T copy-mode-vi v send-keys -X begin-selection
@@ -63,6 +58,11 @@ bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "pbcopy"
 # Update default binding of `Enter` to also use copy-pipe
 unbind -T copy-mode-vi Enter
 bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "pbcopy"
+
+# tmux-prefix-highlight
+set -g @prefix_highlight_bg default
+set -g @prefix_highlight_show_copy_mode 'on'
+set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow'
 
 # Plugins
 set -g @plugin 'tmux-plugins/tmux-battery'
