--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,12 +1,24 @@
+[user]
+  # set in ~/.gitconfig_local
+[include]
+  path = ~/.gitconfig_local
+[core]
+  editor = $EDITOR
+  excludesfile = ~/.gitignore
+  ignorecase = false
+  abbrev = 12
+[alias]
+  l  = log --graph --oneline --decorate
+  ld = log --graph --pretty=format:'%C(yellow)%h%C(bold white red)%d%Creset %s %C(bold green)%cr %Creset%C(white)%an' --abbrev-commit --date=relative
+  ll = log --stat --decorate --source -p
+  branches = for-each-ref --sort=-committerdate --format=\"%(color:blue)%(authordate:relative)\t%(color:red)%(authorname)\t%(color:white)%(color:bold)%(refname:short)\" refs/remotes
+[color]
+  ui = auto
+[diff]
+  algorithm = patience
+  colorMoved = zebra
 [push]
   default = current
-[color]
-  ui = true
-[alias]
-  branches = for-each-ref --sort=-committerdate --format=\"%(color:blue)%(authordate:relative)\t%(color:red)%(authorname)\t%(color:white)%(color:bold)%(refname:short)\" refs/remotes
-[core]
-  excludesfile = ~/.gitignore
-  editor = $EDITOR
 [merge]
   ff = only
 [commit]
@@ -16,11 +28,5 @@
   prune = true
 [rebase]
   autosquash = true
-[diff]
-  colorMoved = zebra
-[user]
-  # set in ~/.gitconfig_local and included
-[include]
-  path = ~/.gitconfig_local
 [pager]
   branch = false
