--- a/ruby/.gemrc
+++ b/ruby/.gemrc
@@ -1,9 +1,9 @@
 ---
-:update_sources: true
-:sources:
-- http://rubygems.org
-:verbose: true
-:bulk_threshold: 1000
-:backtrace: false
-:benchmark: false
 gem: --no-document
+update_sources: true
+sources:
+- https://rubygems.org
+benchmark: false
+backtrace: false
+verbose: true
+bulk_threshold: 1000
