Update tmux and zsh prompt

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,7 +32,7 @@ set-option -g window-status-format "#I:#W"
 set-option -g window-status-current-format "#[bg=colour242,fg=black] #I:#W* "
 set-option -g status-right-length 200
 set -g status-left "Sess: #S #[fg=yellow]∙ "
-set -g status-right "#{prefix_highlight}#{pane_current_path} #[fg=blue]∙ #[fg=white]%A, %b %d %Y %I:%M %p #[fg=red]∙ #[fg=white]ϟ #{battery_percentage}"
+set -g status-right "#{prefix_highlight}#{s|$HOME|~|:pane_current_path} #[fg=blue]∙ #[fg=white]%A, %b %d %Y %I:%M %p #[fg=red]∙ #[fg=white]ϟ #{battery_percentage}"
 
 # Panes settings
 set -g pane-border-style bg=default,fg=colour238
