--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,10 +29,10 @@ set-option -g status-bg colour236
 set-option -g status-fg white
 set-option -g status-justify left
 set-option -g window-status-format "#I:#W"
-set-option -g window-status-current-format "#[bg=colour242,fg=black] #I:#W* "
+set-option -g window-status-current-format "#[bg=colour242,fg=black] #I:#W "
 set-option -g status-right-length 200
-set -g status-left "Sess: #S #[fg=yellow]∙ "
-set -g status-right "#{prefix_highlight}#{s|$HOME|~|:pane_current_path} #[fg=blue]∙ #[fg=white]%A, %b %d %Y %I:%M %p #[fg=red]∙ #[fg=white]ϟ #{battery_percentage}"
+set -g status-left " Sess #S #[fg=colour242]∙ "
+set -g status-right "#{prefix_highlight}#{s|$HOME|~|:pane_current_path} #[fg=colour242]∙ #[fg=white]%A, %b %d %Y %I:%M %p #[fg=colour242]∙ #[fg=white]ϟ #{battery_percentage} "
 
 # Panes settings
 set -g pane-border-style bg=default,fg=colour238
